# lxplug-magnifier

./: .gitignore  README  configure.ac  meson.build
debian/: changelog  control  copyright
plugins/: Makefile.am
plugins/magnifier/: magnifier.c
po/: POTFILES.in  en_GB.po  hy.po  is.po  it.po  ko.po  meson.build  sk.po
src/: magnifier.c  meson.build
